<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_wakeup"
        android:title="@string/action_wakeup"/>
    <item android:id="@+id/action_rest_mode"
        android:title="@string/action_rest_mode"/>
    <item android:id="@+id/action_stream_quality"
        android:title="@string/quality_console_menu"/>
    <item android:id="@+id/action_add_to_home_screen"
        android:title="@string/action_add_to_home_screen"/>
    <item android:id="@+id/action_register_again"
        android:title="@string/action_register_again"/>
    <item android:id="@+id/action_remove_registration"
        android:title="@string/action_remove_registration"/>
    <item android:id="@+id/action_edit"
        android:title="@string/action_edit"/>
    <item android:id="@+id/action_delete"
        android:title="@string/action_delete" />
</menu>