<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widgetRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/widget_background"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingStart="12dp"
    android:paddingTop="8dp"
    android:paddingEnd="12dp"
    android:paddingBottom="8dp">

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/widget_icon_background"
        android:contentDescription="@null"
        android:padding="8dp"
        android:src="@drawable/ic_widget_gamepad" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/widgetTitle"
            android:textAlignment="viewStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="sans-serif-medium"
            android:maxLines="1"
            android:text="@string/app_name"
            android:textColor="@color/md_on_surface"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/widgetSubtitle"
            android:textAlignment="viewStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/widget_play_none"
            android:textColor="@color/md_on_surface_variant"
            android:textSize="13sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/widgetPlay"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/widget_play_background"
        android:contentDescription="@string/action_play"
        android:padding="8dp"
        android:src="@drawable/ic_widget_play" />
</LinearLayout>
